Add statocyst federation peering (#61)
